--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "css-loader": "^3.4.2",
     "csv-loader": "^3.0.2",
     "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.20.2",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -50,8 +53,8 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "gh-pages": "^1.2.0",
     "@babel/polyfill": "^7.8.7",
+    "gh-pages": "^1.2.0",
     "normalize.css": "^8.0.1"
   }
 }
